// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeDefined should return false for boolean with isNot true 1`] = `
Object {
  "message": "    
    expect value to not have a defined value. (equal to undefined or null).
    received: 'object'
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for null 1`] = `
Object {
  "message": "    
    expected should have a defined value. (different than undefined or null).
    got: 'null'
",
  "pass": false,
}
`;

exports[`testing toBeDefined should return false for undefined 1`] = `
Object {
  "message": "    
    expected should have a defined value. (different than undefined or null).
    got: 'undefined'
",
  "pass": false,
}
`;
